feat(Stats 기능 추가): Stats 기능 추가
Stats 기능 추가하였습니다. 그 과정에서 Order부분을 수정했는데 문제가 없기를....